added carousel of images for screen sizes sm and bigger

--- a/main.css
+++ b/main.css
@@ -56,5 +56,18 @@ body {
 }
 
 
+/*********CAROUSEL OF IMAGES*********/
+
+@media screen and (max-width: 768px) {
+.container-carousel {
+  	display: none;
+	}
+}
+
+.carousel-inner {
+	width: 100%;
+	height: 20em;
+}
+
 
 
