--- a/main.css
+++ b/main.css
@@ -101,13 +101,16 @@ a:first-letter {
 
 }
 
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
 
 /************MD SCREEN*************/
 @media screen and (min-width: 950px) {
 
-.container-carousel {
+/*.container-carousel {
 	display: none;
-}
+}*/
 
 #top {
 	display: none;
